# sharedrive-sync

./: CMakeLists.txt  README.md
inc/: alist.h  urlcode.h
lib/: libcurl.so.4.8.0  libjsoncpp.so.25
src/: alist.cpp  main.cpp  urlcode.cpp
